# edgeclaw-pc

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  RUN_TESTS.md  SECURITY.md  deny.toml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly-fuzz.yml  security.yml
benches/: core_bench.rs
config/: default.toml
contracts/: README.md
contracts/aptos/: Move.toml
contracts/aptos/sources/: audit_anchor.move  device_registry.move  policy_nft.move  task_token.move
contracts/cosmos/: Cargo.toml
contracts/cosmos/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/evm/: hardhat.config.js  package-lock.json  package.json
contracts/evm/contracts/: AuditAnchor.sol  DeviceRegistry.sol  PolicyNFT.sol  TaskToken.sol
contracts/evm/scripts/: deploy-sepolia.sh  deploy.js
contracts/evm/test/: EdgeClaw.test.js
contracts/near/: Cargo.toml
contracts/near/src/: lib.rs
contracts/solana/: Anchor.toml  package.json
contracts/solana/programs/edgeclaw/: Cargo.toml
contracts/solana/programs/edgeclaw/src/: audit_anchor.rs  device_registry.rs  lib.rs  policy_nft.rs  task_token.rs
contracts/solana/scripts/: deploy-devnet.sh
contracts/solana/tests/: edgeclaw.ts
contracts/sui/: Move.toml  Published.toml  deployment-testnet.json
contracts/sui/scripts/: deploy-testnet.sh
contracts/sui/sources/: audit_anchor.move  device_registry.move  policy_nft.move  task_token.move  tests.move
docs/: blockchain-integration-guide.md  federation-guide.md  k8s-deployment-guide.md  plugin-dev-guide.md  tee-guide.md  wasm-sdk-reference.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_aes_gcm.rs  fuzz_ecnp_parse.rs  fuzz_federation_policy.rs  fuzz_message_deserialize.rs  fuzz_policy.rs  fuzz_quic_frame.rs  fuzz_tee_attestation.rs  fuzz_wasm_protocol.rs
helm/edgeclaw/: Chart.yaml  values.yaml
helm/edgeclaw/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  servicemonitor.yaml
pkg/: ecnp_wasm.d.ts  ecnp_wasm.js  ecnp_wasm_bg.wasm  ecnp_wasm_bg.wasm.d.ts  package.json
scripts/: fuzz_1m.sh  fuzz_all.sh  fuzz_remaining.sh
src/: activity_collector.rs  activity_log.rs  ai.rs  audit.rs  blockchain.rs  chain.rs  config.rs  discovery.rs  ecnp.rs  edge_ai.rs  error.rs  events.rs  executor.rs  federation.rs  gateway.rs  identity.rs  k8s.rs  lib.rs  license.rs  main.rs  metrics.rs  orchestrator.rs  peer.rs  policy.rs  protocol.rs  registry.rs  secure_boot.rs  security.rs  server.rs  session.rs  sync.rs  system.rs  task_templates.rs  team_sync.rs  tee.rs  tee_sgx.rs  transport.rs  updater.rs  wasm.rs  websocket.rs  (+1 more)
src/workflows/: dev.rs  devops.rs  marketing.rs  mod.rs
static/: chat.html  dashboard.html
wasm-pkg/: Cargo.toml
wasm-pkg/src/: lib.rs
