[package]
name = "edgeclaw-agent"
version = "1.0.0"
edition = "2021"
description = "EdgeClaw PC Agent — Zero-Trust Edge AI Executor Daemon"
license = "MIT OR Apache-2.0"
authors = ["EdgeClaw Foundation"]
repository = "https://github.com/agentumi/edgeclaw-pc"
keywords = ["edge-computing", "zero-trust", "agent", "iot", "ai"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "edgeclaw-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Cryptography
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Networking
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"

# HTTP client (HTTPS support for cloud AI)
ureq = { version = "2", features = ["tls", "json"] }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

# mDNS Service Discovery
mdns-sd = "0.18"

# System info
sysinfo = "0.32"
hostname = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Base64 / Hex
base64 = "0.22"
hex = "0.4"

# Directory management
dirs = "5"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
