[package]
name = "edgeclaw-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
edgeclaw-agent = { path = ".." }
aes-gcm = "0.10"
rand = "0.8"
serde_json = "1"

[[bin]]
name = "fuzz_ecnp_parse"
path = "fuzz_targets/fuzz_ecnp_parse.rs"
doc = false

[[bin]]
name = "fuzz_message_deserialize"
path = "fuzz_targets/fuzz_message_deserialize.rs"
doc = false

[[bin]]
name = "fuzz_aes_gcm"
path = "fuzz_targets/fuzz_aes_gcm.rs"
doc = false

[[bin]]
name = "fuzz_policy"
path = "fuzz_targets/fuzz_policy.rs"
doc = false

[[bin]]
name = "fuzz_wasm_protocol"
path = "fuzz_targets/fuzz_wasm_protocol.rs"
doc = false

[[bin]]
name = "fuzz_federation_policy"
path = "fuzz_targets/fuzz_federation_policy.rs"
doc = false

[[bin]]
name = "fuzz_quic_frame"
path = "fuzz_targets/fuzz_quic_frame.rs"
doc = false

[[bin]]
name = "fuzz_tee_attestation"
path = "fuzz_targets/fuzz_tee_attestation.rs"
doc = false
