[package]
name = "ecnp-wasm"
version = "3.0.0"
edition = "2021"
description = "ECNP v1.1 protocol codec for WebAssembly"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agentumi/edgeclaw-pc"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
