[package]
name = "edgeclaw-solana"
version = "0.1.0"
description = "EdgeClaw Solana Anchor programs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "edgeclaw_solana"

[dependencies]
anchor-lang = "0.29"
anchor-spl = "0.29"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
